fixed horizontal scroll-bars

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -8,6 +8,9 @@
 	color: var(--primary-color);
 	font-family: 'Poppins', sans-serif;
 }
+body {
+    overflow-x: hidden;
+}
 img {
     width: 100%;
     height: auto;
